--- a/guide/install.html
+++ b/guide/install.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>安装 | crx-cli</title>
-    <meta name="description" content="一个用于vue项目搭建的脚手架工具">
+    <meta name="description" content="一个用于拉取模板项目的脚手架工具">
     <link rel="icon" href="favicon.ico">
     
-    <link rel="preload" href="/crxcli_vuepress/assets/css/0.styles.754192be.css" as="style"><link rel="preload" href="/crxcli_vuepress/assets/js/app.cef0672b.js" as="script"><link rel="preload" href="/crxcli_vuepress/assets/js/7.bc44956a.js" as="script"><link rel="prefetch" href="/crxcli_vuepress/assets/js/2.fdfc99fd.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/3.64f94971.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/4.82fd82f6.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/5.37fcaa34.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/6.7c2e0c6f.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/8.50aaaf05.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/9.28f9e670.js">
+    <link rel="preload" href="/crxcli_vuepress/assets/css/0.styles.754192be.css" as="style"><link rel="preload" href="/crxcli_vuepress/assets/js/app.9a110a9f.js" as="script"><link rel="preload" href="/crxcli_vuepress/assets/js/7.9dbb890b.js" as="script"><link rel="prefetch" href="/crxcli_vuepress/assets/js/2.1cb1b2cd.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/3.b456442b.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/4.dd8aa124.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/5.cc962a8b.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/6.b6b6b8ab.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/8.67d86c79.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/9.76e43c36.js">
     <link rel="stylesheet" href="/crxcli_vuepress/assets/css/0.styles.754192be.css">
   </head>
   <body>
@@ -16,7 +16,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <div class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/crxcli_vuepress/" class="nav-link">指南</a></div><div class="nav-item"><a href="/crxcli_vuepress/guide/CHANGELOG.html" class="nav-link">Changelog</a></div><div class="nav-item"><a href="https://www.npmjs.com/package/crx-cli" target="_blank" rel="noopener noreferrer" class="nav-link external">
   NPM
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <ul class="sidebar-links"><li><div class="sidebar-group first"><p class="sidebar-heading"><span>介绍</span> <!----></p> <ul class="sidebar-group-items"><li><a href="/crxcli_vuepress/guide/" class="sidebar-link">crx-cli</a></li></ul></div></li><li><div class="sidebar-group collapsable"><p class="sidebar-heading open"><span>使用说明</span> <span class="arrow down"></span></p> <ul class="sidebar-group-items"><li><a href="/crxcli_vuepress/guide/install.html" class="active sidebar-link">安装</a></li><li><a href="/crxcli_vuepress/guide/use.html" class="sidebar-link">使用</a></li><li><a href="/crxcli_vuepress/guide/example.html" class="sidebar-link">实例</a></li></ul></div></li></ul> </div> <div class="page"> <div class="content"><h2 id="安装"><a href="#安装" class="header-anchor">#</a> 安装</h2> <blockquote><p>crx-cli脚手架工具的安装</p></blockquote> <h3 id="全局安装"><a href="#全局安装" class="header-anchor">#</a> 全局安装</h3> <div class="language- extra-class"><pre class="language-text"><code>`$ npm install -g crx-cli`
-</code></pre></div><p><code>$ crx-cli -v</code> 或 <code>$ crx-cli --version</code> 查看版本检验是否安装成功。</p></div> <div class="page-edit"><!----> <!----></div> <div class="page-nav"><p class="inner"><span class="prev">
+</code></pre></div><p><code>$ crx-cli -v</code> 或 <code>$ crx-cli --version</code> 查看版本检验是否安装成功</p></div> <div class="page-edit"><!----> <!----></div> <div class="page-nav"><p class="inner"><span class="prev">
         ←
         <a href="/crxcli_vuepress/guide/" class="prev router-link-active">
           crx-cli
@@ -25,6 +25,6 @@
         </a>
         →
       </span></p></div> </div> <!----></div></div>
-    <script src="/crxcli_vuepress/assets/js/app.cef0672b.js" defer></script><script src="/crxcli_vuepress/assets/js/7.bc44956a.js" defer></script>
+    <script src="/crxcli_vuepress/assets/js/app.9a110a9f.js" defer></script><script src="/crxcli_vuepress/assets/js/7.9dbb890b.js" defer></script>
   </body>
 </html>
