--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>crx-cli</title>
+    <title>dc-cli</title>
     <meta name="description" content="一个用于拉取模板项目的脚手架工具">
     <link rel="icon" href="favicon.ico">
     
-    <link rel="preload" href="/crxcli_vuepress/assets/css/0.styles.754192be.css" as="style"><link rel="preload" href="/crxcli_vuepress/assets/js/app.9a110a9f.js" as="script"><link rel="prefetch" href="/crxcli_vuepress/assets/js/2.1cb1b2cd.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/3.b456442b.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/4.dd8aa124.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/5.cc962a8b.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/6.b6b6b8ab.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/7.9dbb890b.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/8.67d86c79.js"><link rel="prefetch" href="/crxcli_vuepress/assets/js/9.76e43c36.js">
-    <link rel="stylesheet" href="/crxcli_vuepress/assets/css/0.styles.754192be.css">
+    <link rel="preload" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css" as="style"><link rel="preload" href="/dc-cli_vuepress/assets/js/app.c95d15d6.js" as="script"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/2.854dcf62.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/3.817c0d6a.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/4.56afc190.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/5.6ee02ce4.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/6.dfbb43be.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/7.b13cd86f.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/8.9b4f9c63.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/9.44813344.js">
+    <link rel="stylesheet" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/crxcli_vuepress/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/crxcli_vuepress/assets/js/app.9a110a9f.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/dc-cli_vuepress/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/dc-cli_vuepress/assets/js/app.c95d15d6.js" defer></script>
   </body>
 </html>
