--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="一个用于拉取模板项目的脚手架工具">
     <link rel="icon" href="favicon.ico">
     
-    <link rel="preload" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css" as="style"><link rel="preload" href="/dc-cli_vuepress/assets/js/app.c95d15d6.js" as="script"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/2.854dcf62.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/3.817c0d6a.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/4.56afc190.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/5.6ee02ce4.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/6.dfbb43be.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/7.b13cd86f.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/8.9b4f9c63.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/9.44813344.js">
+    <link rel="preload" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css" as="style"><link rel="preload" href="/dc-cli_vuepress/assets/js/app.88b61a3e.js" as="script"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/2.854dcf62.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/3.7689d16f.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/4.2a6fc764.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/5.bffc2843.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/6.13c60a51.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/7.6a09f856.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/8.036c1167.js">
     <link rel="stylesheet" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/dc-cli_vuepress/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/dc-cli_vuepress/assets/js/app.c95d15d6.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/dc-cli_vuepress/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/dc-cli_vuepress/assets/js/app.88b61a3e.js" defer></script>
   </body>
 </html>
