--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="一个用于拉取模板项目的脚手架工具">
     <link rel="icon" href="favicon.ico">
     
-    <link rel="preload" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css" as="style"><link rel="preload" href="/dc-cli_vuepress/assets/js/app.c95d15d6.js" as="script"><link rel="preload" href="/dc-cli_vuepress/assets/js/3.817c0d6a.js" as="script"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/2.854dcf62.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/4.56afc190.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/5.6ee02ce4.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/6.dfbb43be.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/7.b13cd86f.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/8.9b4f9c63.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/9.44813344.js">
+    <link rel="preload" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css" as="style"><link rel="preload" href="/dc-cli_vuepress/assets/js/app.88b61a3e.js" as="script"><link rel="preload" href="/dc-cli_vuepress/assets/js/3.7689d16f.js" as="script"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/2.854dcf62.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/4.2a6fc764.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/5.bffc2843.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/6.13c60a51.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/7.6a09f856.js"><link rel="prefetch" href="/dc-cli_vuepress/assets/js/8.036c1167.js">
     <link rel="stylesheet" href="/dc-cli_vuepress/assets/css/0.styles.7f899ed6.css">
   </head>
   <body>
@@ -18,6 +18,6 @@
   <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></div> <!----></nav>  <ul class="sidebar-links"><li><div class="sidebar-group first"><p class="sidebar-heading open"><span>介绍</span> <!----></p> <ul class="sidebar-group-items"><li><a href="/dc-cli_vuepress/guide/" class="sidebar-link">dc-cli</a></li></ul></div></li><li><div class="sidebar-group collapsable"><p class="sidebar-heading"><span>使用说明</span> <span class="arrow right"></span></p> <!----></div></li></ul> </div> <div class="home"><div class="hero"><!----> <h1>dc-cli</h1> <p class="description">
       一个用于拉取模板项目的脚手架工具
     </p> <p class="action"><a href="/dc-cli_vuepress/guide/" class="nav-link action-button">快速上手 →</a></p></div> <div class="features"><div class="feature"><h2>简洁</h2> <p>简单的命令，适用于vue和react。</p></div><div class="feature"><h2>易用</h2> <p>安装即用，根据说明文档可快速上手。</p></div><div class="feature"><h2>高效</h2> <p>开发者不必重复配置，小菜鸡还能怎么吹。</p></div></div> <div class="content custom"></div> <!----></div> <!----></div></div>
-    <script src="/dc-cli_vuepress/assets/js/app.c95d15d6.js" defer></script><script src="/dc-cli_vuepress/assets/js/3.817c0d6a.js" defer></script>
+    <script src="/dc-cli_vuepress/assets/js/app.88b61a3e.js" defer></script><script src="/dc-cli_vuepress/assets/js/3.7689d16f.js" defer></script>
   </body>
 </html>
